--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row row-content align-items center">             
                 <div class="col-4 col-sm-2 offset-1">
@@ -107,8 +107,7 @@
                 <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
                 <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
             </div>
-        </div>
-    </div>
+        </div>    
     </footer>
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
