--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="mt-4 col-md-4 col-xl-2">
-                    <a class="btn btn-info btn-lg" href="#" role="button">Reserve Campsite</a>
+                    <a class="btn btn-info btn-lg" href="reserveForm" role="button">Reserve Campsite</a>
                 </div>
             </div>
         </div>
