--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="mt-4 col-md-4 col-xl-2">
-                    <a class="btn btn-info btn-lg" href="reserveForm" role="button">Reserve Campsite</a>
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -54,6 +54,8 @@
                                     class="fa fa-address-card fa-lg"></i> Contact</a></li>
                     </ul>
                 </div>
+            </button>
+        </div>
     </nav>
 
     <div class="container">
@@ -94,13 +96,10 @@
                 </div>
             </div>
         </div>
-
-
         <div class="row">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
-
             <div class="col">
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
@@ -142,6 +141,7 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -181,8 +181,13 @@
             <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
             <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
             <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+            <script>
+               $(function () {
+                    $('[data-toggle="tooltip"]').tooltip()
+                }) 
+            </script>
         </div>
-    </div>        
+    </div>
 </body>
 
 </html>
